# imap-mcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.sample.toml  flake.nix  test-server.sh
.github/workflows/: ci.yml
src/: config.rs  email.rs  imap_client.rs  lib.rs  main.rs  oauth2.rs
src/imap_client/: mod.rs  util.rs
src/tools/: draft.rs  mod.rs  read.rs  write.rs
src/tools/draft/: mod.rs  render.rs
tests/: integration_greenmail.rs
